--- a/_config.yml
+++ b/_config.yml
@@ -58,22 +58,21 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name             : "Rizki Yusup Kurniawan"
+  avatar           : "/assets/images/profile.jpg"
+  bio              : "DevOps & SysAdmin Enthusiast | Sharing projects & deployment tips"
+  location         : "Indonesia"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/rizki-yusup-kurniawan-0488b6320"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/Rizkiyusupk"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://www.instagram.com/ikiii736__/profilecard/?igsh=MTV2MnpzN2ltZTgwdg=="
+
 
 footer:
   links:
