--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,9 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/"
+    - label: "GitLab"
+      icon: "fab fa-fw fa-gitlab"
+      url: "https://gitlab.com/rizkiyusupk"
 
 defaults:
   # _posts
