--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,9 @@ footer:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       url: "https://gitlab.com/rizkiyusupk"
+    - label: "Gmail"
+      icon: "fab fa-fw fa-Gmail"
+      url: "rizkiyusupk@gmail.com"
 
 defaults:
   # _posts
