--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,10 @@ author:
     - label: "Gmail"
       icon: "fab fa-fw fa-google"
       url: "mailto:rizkiyusupk@gmail.com"
+    - icon: docker
+      label: "Docker Hub"
+      href: "https://hub.docker.com/u/rizki736"
+
 
 
 
@@ -98,6 +102,9 @@ footer:
     - label: "Gmail"
       icon: "fab fa-fw fa-google"
       url: "rizkiyusupk@gmail.com"
+    - icon: docker
+      label: "Docker Hub"
+      href: "https://hub.docker.com/u/rizki736"
 
 defaults:
   # _posts
