--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author:
     - label: "Gmail"
       icon: "fab fa-fw fa-google"
       url: "mailto:rizkiyusupk@gmail.com"
-    - icon: docker
+    - icon:  "fab fa-fw fa-docker"
       label: "Docker Hub"
       href: "https://hub.docker.com/u/rizki736"
 
@@ -102,7 +102,7 @@ footer:
     - label: "Gmail"
       icon: "fab fa-fw fa-google"
       url: "rizkiyusupk@gmail.com"
-    - icon: docker
+    - icon:  "fab fa-fw fa-docker"
       label: "Docker Hub"
       href: "https://hub.docker.com/u/rizki736"
 
