--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,7 @@ defaults:
       comments: true
       share: true
       related: true
+      teaser: true
   # _pages
   - scope:
       path: "_pages"
