--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ search: true
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+#custom settings
+search: true
+future: true
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
