--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 #custom settings
 search: true
+future: true
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
